syntax = "proto3";

package api.usertier.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/wyfcoding/ecommerce/goapi/usertier/v1;usertierv1";

// 会员等级与积分服务，负责维护用户成长值体系、多维度积分获取及兑换商城逻辑。
service UserTierService {
  // 获取用户当前的等级权益、成长进度及累计积分。
  rpc GetUserTier(GetUserTierRequest) returns (GetUserTierResponse);

  // 核心调用：在用户完成特定活跃行为时增加成长值。
  rpc AddScore(AddScoreRequest) returns (google.protobuf.Empty);

  // 获取用户当前的可用积分余量。
  rpc GetPoints(GetPointsRequest) returns (GetPointsResponse);

  // 发放奖励积分。
  rpc AddPoints(AddPointsRequest) returns (google.protobuf.Empty);

  // 扣减用于消费或兑换的积分。
  rpc DeductPoints(DeductPointsRequest) returns (google.protobuf.Empty);

  // 列表检索用户积分的流水变动历史。
  rpc ListPointsLogs(ListPointsLogsRequest) returns (ListPointsLogsResponse);

  // 在积分商城执行权益或实物兑换。
  rpc Exchange(ExchangeRequest) returns (google.protobuf.Empty);

  // 查询系统当前可供兑换的项目库。
  rpc ListExchanges(ListExchangesRequest) returns (ListExchangesResponse);
}

// 会员等级详情。
message UserTier {
  // 用户唯一标识。
  uint64 user_id = 1;
  // 数字等级。
  int32 level = 2;
  // 展示名 (如 "铂金")。
  string level_name = 3;
  // 累计成长值。
  int64 score = 4;
  // 升级所需成长值。
  int64 next_level_score = 5;
  // 升迁百分比进度。
  double progress_to_next_level = 6;
  // 当前等级对应的专属折扣。
  double discount_rate = 7;
  // 实时可用积分。
  double points = 8;
  // 录入时间。
  google.protobuf.Timestamp created_at = 9;
  // 最后修改。
  google.protobuf.Timestamp updated_at = 10;
}

// 积分流水。
message PointsLog {
  // 流水 ID。
  uint64 id = 1;
  // 用户。
  uint64 user_id = 2;
  // 变动数值。
  int64 points = 3;
  // 业务理由。
  string reason = 4;
  // 分类标签。
  string type = 5;
  // 发生时刻。
  google.protobuf.Timestamp created_at = 6;
}

// 兑换项。
message ExchangeItem {
  // 唯一 ID。
  uint64 id = 1;
  // 商品标题。
  string name = 2;
  // 详细描述。
  string description = 3;
  // 消耗积分单价。
  int64 required_points = 4;
  // 剩余库存。
  int32 stock = 5;
  // 上架时间。
  google.protobuf.Timestamp created_at = 6;
  // 修改时间。
  google.protobuf.Timestamp updated_at = 7;
}

// 详情请求。
message GetUserTierRequest {
  // 用户 ID。
  uint64 user_id = 1;
}

// 详情结果。
message GetUserTierResponse {
  // 会员等级对象。
  UserTier tier = 1;
}

// 成长值请求。
message AddScoreRequest {
  // 用户。
  uint64 user_id = 1;
  // 增量。
  int64 score = 2;
}

// 积分请求。
message GetPointsRequest {
  // 用户。
  uint64 user_id = 1;
}

// 积分响应。
message GetPointsResponse {
  // 可用余量。
  int64 points = 1;
}

// 积分补录请求。
message AddPointsRequest {
  // 用户。
  uint64 user_id = 1;
  // 增量。
  int64 points = 2;
  // 理由。
  string reason = 3;
}

// 积分扣除请求。
message DeductPointsRequest {
  // 用户。
  uint64 user_id = 1;
  // 减量。
  int64 points = 2;
  // 理由。
  string reason = 3;
}

// 流水列表查询。
message ListPointsLogsRequest {
  // 用户。
  uint64 user_id = 1;
  // 页码。
  int32 page = 2;
  // 数量。
  int32 page_size = 3;
}

// 流水列表响应。
message ListPointsLogsResponse {
  // 流水记录序列。
  repeated PointsLog logs = 1;
  // 总笔数。
  int64 total_count = 2;
}

// 兑换动作。
message ExchangeRequest {
  // 用户。
  uint64 user_id = 1;
  // 目标项 ID。
  uint64 exchange_id = 2;
}

// 商城检索。
message ListExchangesRequest {
  // 页码。
  int32 page = 1;
  // 数量。
  int32 page_size = 2;
}

// 商城列表响应。
message ListExchangesResponse {
  // 兑换项序列。
  repeated ExchangeItem items = 1;
  // 总项数。
  int64 total_count = 2;
}
